Adicionada rota que buca cidade por id
